<resources>
    <string name="app_name">DataCollector</string>
    <string name="image_text">Image</string>
    <string name="video_text">Video</string>
    <string name="take_photo">Take Photo</string>
    <string name="next">Next</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_fname">First name</string>
    <string name="hint_mname">Middle name</string>
    <string name="hint_lname">Last name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
</resources>
